# Distributed-Systems

./: README.md
Lab1-sockets/: .gitignore
Lab2-rest/: pyproject.toml
Lab2-rest/lab-task/: lab_task.py
Lab2-rest/project/: .gitignore  pom.xml
Lab2-rest/project/src/main/java/com/agh/project/: ProjectApplication.java
Lab2-rest/project/src/main/resources/: application.properties
Lab2-rest/project/src/main/resources/static/: index.html  style.css
Lab3-zeroc-ice/SmartHome/SmartHomeClient/: config.client  main.py  pyproject.toml
Lab3-zeroc-ice/SmartHome/SmartHomeClient/SmartHome/: __init__.py  server_ice.py
Lab3-zeroc-ice/SmartHome/SmartHomeClient/interactiveShell/controlPanel/: command.py  command_parser.py  control_panel.py
Lab3-zeroc-ice/SmartHome/SmartHomeClient/interactiveShell/handlers/: control_panel_commands_handler.py  device_commands_handler.py
Lab3-zeroc-ice/SmartHome/SmartHomeClient/interactiveShell/handlers/fridgeHandlers/: fridge_commands_handler.py  fridge_with_ice_commands_handler.py  fridge_with_shopping_list_commands_handler.py
Lab3-zeroc-ice/SmartHome/SmartHomeClient/interactiveShell/handlers/lightHandlers/: lamp_handler.py  led_lamp_handler.py
Lab3-zeroc-ice/SmartHome/SmartHomeClient/interactiveShell/handlers/temperatureHandlers/: fridge_with_ice_commands_handler.py  fridge_with_shopping_list_commands_handler.py  temperature_sensor_commands_handler.py
Lab5-ray/: Dockerfile  Oswiadczenie.txt  docker-compose.yml  jupyter_lab_config.py  lab_ray.ipynb  pyproject.toml
Lab5-ray/.ipynb_checkpoints/: lab_ray-checkpoint.ipynb
(+98 files in other folders)
