[tool.poetry]
name = "lab2-rest"
version = "0.1.0"
description = ""
authors = ["Kamil Rudny <k.rudny1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
